--- a/lesson.css
+++ b/lesson.css
@@ -26,9 +26,9 @@
 }
 
 .active {
-  background-color: #eee;
+  background-color: #3939ee;
 }
 
 .inactive {
-  background-color: #444;
+  background-color: #d6c7c7;
 }
