--- a/lesson.css
+++ b/lesson.css
@@ -26,9 +26,9 @@
 }
 
 .active {
-  background-color: #3939ee;
+  background-color: #47BBFF;
 }
 
 .inactive {
-  background-color: #d6c7c7;
+  background-color: #FFF633;
 }
